added helper addGame function and button in game details to add direactly to the game list

--- a/src/App.css
+++ b/src/App.css
@@ -84,5 +84,13 @@
 }
 
 .gamed {
-  width: 600px
+  width: 600px;
+}
+
+.Button {
+  color: blue;
+}
+
+.Button:disabled { /* Increase the specificity */
+  color: white;
 }
