images in gallery are better shown

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,11 @@
   color: blue;
 }
 
-.Button:disabled { /* Increase the specificity */
+.Button:disabled {
+  /* Increase the specificity */
   color: white;
+}
+
+.imageingallery {
+  object-fit: "cover";
 }
