--- a/src/App.css
+++ b/src/App.css
@@ -8,13 +8,29 @@
 .form-container {
   width: 400px;
   margin: auto;
+  padding-top: 10%;
 }
 
+@media screen and (max-width: 900px) {
+  .form-container {
+    width: 400px;
+    margin: auto;
+    padding-top: 20%;
+  }
+}
 .ui.teal.button:focus,
 .ui.teal.buttons .button:focus {
   background-color: #00b5ad;
 }
 
+.game-search {
+  padding-top: 10%;
+}
+@media screen and (max-width: 900px) {
+  .game-search {
+    padding-top: 15%;
+  }
+}
 .root {
   /* // maxWidth: 345,
     // margin: "auto", */
