--- a/src/Styles/BookDetails.css
+++ b/src/Styles/BookDetails.css
@@ -6,8 +6,10 @@
   margin-bottom: 10px;
 }
 .bookCoverDiv {
-  border: 4px solid #333;
+  border: 1px solid #dbdee0;
+  border-radius: 10px;
   padding: 10px;
+  position: relative;
 }
 .bookDetailsDiv {
   /* display: inline-block; */
@@ -20,8 +22,17 @@
   flex-wrap: nowrap;
   /* flex-flow: column wrap; */
   /* border: 1px solid black; */
+  padding-top: 10%;
 }
-
+@media screen and (max-width: 900px) {
+  .detailsContainer {
+    display: inline-flex;
+    flex-wrap: nowrap;
+    /* flex-flow: column wrap; */
+    /* border: 1px solid black; */
+    padding-top: 20%;
+  }
+}
 .detailDividers {
   margin: 10px;
 }
