--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap");
+
 .page-title {
   display: block !important;
   text-align: center;
