--- a/src/Styles/BookDetails.css
+++ b/src/Styles/BookDetails.css
@@ -24,6 +24,10 @@
   /* border: 1px solid black; */
   padding-top: 10%;
 }
+
+.directorAndWriter {
+  margin-top: 10%;
+}
 @media screen and (max-width: 900px) {
   .detailsContainer {
     display: inline-flex;
